# hackathon-2025-cup

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: analytics_deploy_sls.yaml  applications_deploy_sls.yaml  docs_deploy_s3.yaml  events_deploy_sls.yaml  files_deploy_sls.yaml  frontend_deploy_s3.yaml  go_deploy_sls.yaml  notifications_deploy_sls.yaml  notify.yml  organizations_deploy_sls.yaml  python_deploy_sls.yaml  reports_deploy_sls.yaml  sync.yaml  teams_deploy_sls.yaml  users_deploy_sls.yaml
backend/analytics/: go.mod  go.sum
backend/applications-service/: .gitignore  DOCS.md  README.md  go.mod  go.sum
backend/events/: go.mod  go.sum
backend/files-service/: go.mod  go.sum
backend/organizations/: go.mod  go.sum
backend/reports/: .gitignore  README.md  go.mod  go.sum
backend/teams/: .gitignore  go.mod  go.sum
backend/users-service/: .dockerignore  .env  .gitignore  .ruff.toml  keygen.py  pyproject.toml  requirements.txt  yappa_api.yaml  yappa_gw.1.yaml  yappa_gw.yaml  yappa_gw_notifications.yaml  yappa_notifications.yaml
backend/users-service/app/: __init__.py  __main__.py
backend/users-service/app/api/: __init__.py  application.py  lifetime.py  tools.py
backend/users-service/app/api/v1/: router.py
backend/users-service/app/api/v1/endpoints/: account.py  filters.py  generator.py  notifications.py  observability.py  providers.py  public.py  requests.py
backend/users-service/app/api/v1/schemas/: __init__.py  account.py
backend/users-service/app/core/: config.py  crypto_manager.py  dependencies.py  log.py  settings.py  tokens.py
backend/users-service/app/db/base/: __init__.py  relation.py  repository.py  unit_of_work.py  user.py
backend/users-service/app/db/ydb/: __init__.py  _types.py  favorites.py  filters.py  notification.py  relation.py  repository.py  request.py  unit_of_work.py  user.py
backend/users-service/app/models/: __init__.py  base.py  notification.py  relation.py  request.py  user.py
backend/users-service/app/notifications/: __init__.py  conf.py  email_sender.py
backend/users-service/app/notifications/templates/: email_template.html  notification_email.html  registration_email.html
backend/users-service/app/services/: __init__.py  factory.py  favorites.py  filters.py  generate_protocol.py  notification.py  relation.py  requests.py  user.py
backend/users-service/app/services/auth/: auth.py  base.py  oauth.py
backend/users-service/app/services/auth/providers/: __init__.py  discord.py  github.py  google.py  linkedin.py  microsoft.py  talent.py  telegram.py  vk.py  yandex.py
backend/users-service/app/services/auth/utils/: config.py
backend/users-service/app/services/oauth/: __init__.py  config_loader.py  exceptions.py  oauth_provider.py  utils.py
backend/users-service/app/services/oauth/providers/: __init__.py  rsaag.py  vk.py  yandex.py
backend/users-service/app/use_cases/: __init__.py  factory.py
backend/users-service/keys/: encryption_key1.pem  exemple_as.pem  exemple_s.pem
docs/: .yfm  openapi.json  openapi_analytics.yaml  openapi_applications.yaml  openapi_organizations.yaml  openapi_reports.yaml  openapi_teams.yaml  toc.yaml
docs/pages/: architecture.md  description.md  index.yaml  introduction.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
router/: nginx.conf
(+196 files in other folders)
